cargo-features = ["edition2024"]

[package]
name = "vencoord"
version = "0.1.0"
edition = "2024"

[dependencies]
pollster = "0.3.0"
raw-window-handle = "0.6.0"
smithay-client-toolkit = { version = "0.18.1", default-features = false, features = ["xkbcommon"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
vello = "0.1.0"
wayland-backend = { version = "0.3.3", features = ["client_system"] }
wayland-client = "0.31.1"
wayland-protocols-wlr = "0.2.0"
wgpu = "0.19.3"

[dev-dependencies]
proptest = "1.4.0"
